feat: add get all user endpoint
